Fixed overlapping navbar on sidebar

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -138,9 +138,12 @@
     box-shadow: 1px 1px 5px #8a8a8a;
   }
   @media screen and (max-width: 768px){
-    .sidebar{
-      padding-top: 75px;
+    div.sidebar{
+      z-index: 9999;
     }
+    .navbar.fixed-top{
+      z-index:1;
+      }
   }
   .sidebar a {
     font-size: 1.3rem;
